--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><a href="3-lagenmodel.html">3-lagenmodel</a></li>
             <li><a href="fysieke-enlogischelaag.html">Fysieke- en logische laag</a></li>
             <li><a href="toepassingslaag.html">Toepassingslaag</a></li>
-            <li><a href="databases.html">Databases</a></li>
+            <li><a href="specifiekonderwerp.html">Databases</a></li>
         </ul>
 
         <h2> "Tekst" </h2>
